CSNetwork1/CSNetwork1/nestedtemplates/DmzNsg.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "CustomerShort": {
      "type": "string",
      "minLength": 2,
      "maxLength": 6,
      "metadata": {
        "description": "The short name (6 char max) for this customer. Used for prefixes on objects/resources"
      }
    },
    "MGTSubnetCIDR": {
      "type": "string",
      "defaultValue": "172.16.0.64/26",
      "metadata": {
        "description": "CIDR based virtual network definition for this solution. Defaults to 29 mask bits"
      }
    },
    "DMZSubnetCIDR": {
      "type": "string",
      "defaultValue": "172.16.0.128/25",
      "metadata": {
        "description": "CIDR based virtual network definition for this solution. Defaults to 25 mask bits"
      }
    }
  },
  "variables": {
    "DmzNsgName": "[concat(parameters('CustomerShort'),'-CS-CD-DMZ-NSG')]"
  },
  "resources": [
    {
      "apiVersion": "2017-03-01",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('DmzNsgName')]",
      "location": "[resourceGroup().location]",
      "tags": {
        "displayName": "[variables('DmzNsgName')]"
      },
      "properties": {
        "securityRules": [
          {
            "name": "AllowHttpInBound",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "AllowHttpsInBound",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 101,
              "direction": "Inbound"
            }
          },
          {
            "name": "AllowRDPInBoundFromMGT",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "[parameters('MgtSubnetCIDR')]",
              "destinationAddressPrefix": "[parameters('DmzSubnetCIDR')]",
              "access": "Allow",
              "priority": 300,
              "direction": "Inbound"
            }
          },
          {
            "name": "AllowLocalSubnet",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[parameters('DmzSubnetCIDR')]",
              "destinationAddressPrefix": "[parameters('DmzSubnetCIDR')]",
              "access": "Allow",
              "priority": 1000,
              "direction": "Inbound"
            }
          },
          {
            "name": "denyVnetInBound",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Deny",
              "priority": 4096,
              "direction": "Inbound",
              "description": "deny InterVnet Traffic"
            }
          }
        ]
      }
    }
  ],
  "outputs": {
    "Name": {
      "value": "[variables('DmzNsgName')]",
      "type": "string"
    }
  }
}
